--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="perfil">Perfil</string>
     <string name="favoritos">Favoritos</string>
     <string name="mensajes">Mensajes</string>
+    <string name="hotel_title">Titulo de Hotel</string>
+    <string name="hotel_description">Description Hotel</string>
+    <string name="hotel_address">Direccion de el hotel</string>
 </resources>
