--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
     <string name="hotel_title">Titulo de Hotel</string>
     <string name="hotel_description">Description Hotel</string>
     <string name="hotel_address">Direccion de el hotel</string>
+    <string name="noti">Notificaciones</string>
 
 </resources>
