Chat y Perfil Ok, pendiente validar login para mostrar datos según corresponda con el usuario logueado.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,14 @@
     <string name="mensajes">Mensajes</string>
 
     <!--Perfil-->
-    <string name="tituloPerfil">Usuario</string>
+    <string name="tituloPerfil">Perfil</string>
     <string name="nombrePerfil">Nombre</string>
     <string name="generoPerfil">Género</string>
     <string name="emailPerfil">Email</string>
+
+    <!--Chat-->
+    <string name="tituloChat">Contactos</string>
+    <string name="nombreChat">Nombre Hotel</string>
 
     <!--Login-->
     <string name="tituloLogin">Login</string>
