Se realiza una etiqueta inicial a todas las pantallas para el correcto funcionamineto de gestos.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,13 @@
     <!--Mapa en Hotel-->
     <string name="teencontraras">Dónde estaras</string>
 
+    <!--Activity Map-->
+    <string name="hotelActivity">Tu ubicación</string>
+
+    <!--Activity favoritos-->
+    <string name="favActivity">Tus hoteles favoritos</string>
+
+    <!--Activity Inicio -->
+    <string name="hotelescercanos">Hoteles cercanos a Ti</string>
+
 </resources>
